--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,114 @@
+# Python
 __pycache__/
-*.pyc
-.DS_Store
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
+.venv/
+venv/
+ENV/
+env/
+.virtualenv
+
+# IDE
 .vscode/
-training_data/dataset/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Environment variables
+.env
+*.env
+!.env.example
+
+# Credentials and secrets
+passwords.txt
+credentials.json
+secrets.yaml
+*.pem
+*.key
+
+# Logs
+*.log
+logs/
+*.log.*
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+PyWhatKit_DB.txt
+
+# Model files (too large for git)
+*.pt
+*.pth
+*.onnx
+*.tflite
+!yolov8n.pt
+
+# Training data (large datasets)
+training_data/dataset/train/
+training_data/dataset/valid/
+training_data/dataset/test/
+*.zip
+*.tar.gz
+
+# Evidence images (can be large)
+breached/*.jpg
+breached/*.png
+breached/*.jpeg
+!breached/.gitkeep
+
+# OS
+Thumbs.db
+Desktop.ini
+.Spotlight-V100
+.Trashes
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
+temp/
+tmp/
+
+# Audio files (optional - can be large)
+# Uncomment if you don't want to track audio
+# *.mp3
+# *.wav
+
+# Test files
+test_*.py
+pytest_cache/
+.coverage
+htmlcov/
+
+# Documentation build
+docs/_build/
+docs/.doctrees/
